fixed spacing issue

--- a/src/css/AppAd.module.css
+++ b/src/css/AppAd.module.css
@@ -13,7 +13,6 @@
   margin-top: 3rem;
   background-color: var(--bg-2);
   border-radius: 24px;
-  align-items: center;
   transition: box-shadow 0.1s ease-out;
   overflow: hidden;
 }
@@ -61,6 +60,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.1rem;
+  margin-right: 1rem;
 }
 
 #titleAndDescription p {
@@ -95,5 +95,6 @@
   #titleAndDescription {
     align-items: center;
     text-align: center;
+    margin-right: 0rem;
   }
 }
